trunk/Archive2/18/e3328f68856926/output
main.cpp:8:26: error: redefinition of 'member' with a different type: 'int' vs 'MemberType'
auto Holder<MemberType>::member = 55;
                         ^
main.cpp:4:23: note: previous definition is here
    static MemberType member;
                      ^
1 error generated.
