trunk/Archive2/18/e3328f68856926/main.cpp
template <typename MemberType>
struct Holder
{
    static MemberType member;
};

template <typename MemberType>
auto Holder<MemberType>::member = 55;

int main()
{
}